discussion/kv_engine/173282/173282_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51715: Timeout SeqnoPersistenceRequests when no data is flushed

Prior to this change, a SeqnoPersistenceRequest would wait 'forever'
if no data is moving through the vbucket and never timeout. This is
because execution into the code managing the SeqnoPersistenceRequests
only occurs from a successful flush of an item.

This is addressed in this commit by the addition of a new task which
will run when there are SeqnoPersistenceRequests to expire. This new
task runs for persistent and ephemeral (replacing
EphemeralBucket::NotifyHighPriorityReqTask) and aims to only run when
notifications might need expiring.

The configuration is updated so that 0 is a legal value for
"seqno_persistence_timeout", enabling tests with minimal real run-time.

Change-Id: I603ad4c8f62e496d5d6bea80bc5ef4f196714989

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-07 16:10:31.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 16:50:44.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45103/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\monotonic_queue.h(67): error C2993: "Invariant": illegal type for non-type template parameter "Name" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45103/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37887/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:57:17:
error: no member named "setLabel" in "Monotonic<long, DefaultOrderReversedPolicy, nullptr, BasicNameLabelPolicy, cb::greater>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37887/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16515/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    bucket->addVbucketWithSeqnoPersistenceRequest(
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:51:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16515/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6170/ : FAILURE

Compile error at [2022-04-07T16:46:55.398Z] ../kv_engine/engines/ep/src/monotonic_queue.h:67:39:
error: template argument for non-type template parameter must be an expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6170/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18287/ : FAILURE

Compile error at [2022-04-07T16:47:52.223Z] ../kv_engine/engines/ep/src/monotonic_queue.h:67:48:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, const char* Name, class LabelPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18287/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18623/ : FAILURE

Compile error at [2022-04-07T16:49:44.995Z] ../kv_engine/engines/ep/src/monotonic_queue.h:67:48:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, const char* Name, class LabelPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18623/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19319/ : FAILURE

Compile error at [2022-04-07T16:46:53.462Z] ../kv_engine/engines/ep/src/monotonic_queue.h:67:39:
error: template argument for non-type template parameter must be an expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19319/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17384/ : FAILURE

Compile error at [2022-04-07T16:22:34.724Z] ../kv_engine/engines/ep/src/monotonic_queue.h:67:39:
error: template argument for non-type template parameter must be an expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17384/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26697/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6230/ : FAILURE

Compile error at [2022-04-07T16:37:14.791Z] ../kv_engine/engines/ep/src/monotonic_queue.h:67:48:
error: type/value mismatch at argument 3 in template parameter list for ?template<class T, template<class> class OrderReversedPolicy, const char* Name, class LabelPolicy, template<class> class Invariant> class Monotonic?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6230/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15450/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
